--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
         <!-- Page Header-->
         
-        <header class="masthead" style="background-image: url('/assets/images/pngtree-keyboard-technology-data-analysis-technology-picture-image_1094683.jpg')">
+        <header class="masthead" style="background-image: url('./assets/images/pngtree-keyboard-technology-data-analysis-technology-picture-image_1094683.JPG')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
