--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('/assets/images/page.jpg')">
+        <header class="masthead" style="background-image: url('./assets/images/page.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -50,7 +50,7 @@
         <iframe style="float: right;" width="350" height="365" src="https://www.youtube.com/embed/R5kwcMOF4ZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         
                         <h2 style="text-align: center;">Front-End Dev Skills</h2>
-                        <img ; src="/assets/images/skills.jpg">
+                        <img ; src="./assets/images/skills.jpg">
                         
                         </div>
                         <main class="mb-4">
